# internal/handler/grpc/handler.go
@@ -1,0 +1,63 @@
+package grpc
+
+import (
+	"context"
+
+	idm "github.com/maxuanquang/idm/internal/generated/grpc/idm"
+	"github.com/maxuanquang/idm/internal/logic"
+)
+
+func NewHandler(accountLogic logic.Account) idm.IdmServiceServer {
+	return &Handler{
+		accountLogic: accountLogic,
+	}
+}
+
+type Handler struct {
+	idm.UnimplementedIdmServiceServer
+	accountLogic logic.Account
+}
+
+// CreateAccount implements idm.IdmServiceServer.
+func (h *Handler) CreateAccount(ctx context.Context, in *idm.CreateAccountRequest) (*idm.CreateAccountResponse, error) {
+	account, err := h.accountLogic.CreateAccount(ctx, logic.CreateAccountInput{
+		AccountName: in.AccountName,
+		Password:    in.Password,
+	})
+	if err != nil {
+		return nil, err
+	}
+	return &idm.CreateAccountResponse{
+		AccountId: account.ID,
+	}, nil
+}
+
+// CreateDownloadTask implements idm.IdmServiceServer.
+func (h *Handler) CreateDownloadTask(ctx context.Context, in *idm.CreateDownloadTaskRequest) (*idm.CreateDownloadTaskResponse, error) {
+	panic("unimplemented")
+}
+
+// CreateSession implements idm.IdmServiceServer.
+func (h *Handler) CreateSession(ctx context.Context, in *idm.CreateSessionRequest) (*idm.CreateSessionResponse, error) {
+	panic("unimplemented")
+}
+
+// DeleteDownloadTask implements idm.IdmServiceServer.
+func (h *Handler) DeleteDownloadTask(ctx context.Context, in *idm.DeleteDownloadTaskRequest) (*idm.DeleteDownloadTaskResponse, error) {
+	panic("unimplemented")
+}
+
+// GetDownloadTaskFile implements idm.IdmServiceServer.
+func (h *Handler) GetDownloadTaskFile(*idm.GetDownloadTaskFileRequest, idm.IdmService_GetDownloadTaskFileServer) error {
+	panic("unimplemented")
+}
+
+// GetDownloadTaskList implements idm.IdmServiceServer.
+func (h *Handler) GetDownloadTaskList(ctx context.Context, in *idm.GetDownloadTaskListRequest) (*idm.GetDownloadTaskListResponse, error) {
+	panic("unimplemented")
+}
+
+// UpdateDownloadTask implements idm.IdmServiceServer.
+func (h *Handler) UpdateDownloadTask(ctx context.Context, in *idm.UpdateDownloadTaskRequest) (*idm.UpdateDownloadTaskResponse, error) {
+	panic("unimplemented")
+}
